# OCP13_OC-Lettings-FR

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  dockerfile  entrypoint.sh  oc-lettings-site.sqlite3  pyproject.toml  requirements.txt  setup.cfg  sshd_config
.github/workflows/: ci-cd-experiments.yml  ci-cd-pipeline.yml  ci-cd.yml  main_ocl-source.yml
doc/: conf.py  index.rst
docs/: ci-cd.rst  conf.py  index.rst  local_dev.rst  quickstart.rst
lettings/: admin.py  models.py  urls.py  views.py
lettings/migrations/: 0001_initial.py  0002_alter_address_options.py
lettings/tests/: conftest.py
lettings/tests/integration_tests/: test_views.py
lettings/tests/unit_tests/: test_models.py  test_urls.py
nginx/: nginx.conf
oc_lettings_site/: settings.py  urls.py  views.py
oc_lettings_site/migrations/: 0002_alter_address_id_alter_letting_id_alter_profile_id.py  0003_remove_letting_address_delete_address_delete_letting.py  0004_delete_profile.py
oc_lettings_site/tests/integration_tests/: test_views.py
oc_lettings_site/tests/unit_tests/: test_urls.py
profiles/: admin.py  models.py  urls.py  views.py
profiles/management/commands/: initadmin.py
profiles/migrations/: 0001_initial.py
profiles/tests/: conftest.py
profiles/tests/integration_tests/: test_views.py
profiles/tests/unit_tests/: test_models.py  test_urls.py
templates/: 404.html  500.html  index.html
